--- a/src/applications/CMakeLists.txt
+++ b/src/applications/CMakeLists.txt
@@ -35,3 +35,4 @@ add_subdirectory(stokesVAS)
 add_subdirectory(nsPAS_2_Temp)
 add_subdirectory(probeLocation)
 add_subdirectory(nsSRM)
+#add_subidrectory(nsAL)
